disabled compression build

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/fight-platform-web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/fight-platform-web.data.gz",
-        frameworkUrl: buildUrl + "/fight-platform-web.framework.js.gz",
-        codeUrl: buildUrl + "/fight-platform-web.wasm.gz",
+        dataUrl: buildUrl + "/fight-platform-web.data",
+        frameworkUrl: buildUrl + "/fight-platform-web.framework.js",
+        codeUrl: buildUrl + "/fight-platform-web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Platformer Template",
